--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "MERN shopping cart app",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node backend/server",
     "server": "nodemon backend/server",
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/GraceYou500/Mern-stack-project-ProShop#readme",
   "dependencies": {
+    "dotenv": "^16.0.2",
     "express": "^4.18.1"
   },
   "devDependencies": {
